--- a/index.html
+++ b/index.html
@@ -1,114 +1,175 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8" />
     <title>CasinoCoin Ledger Demo Application</title>
     <style>
-      #main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 90vh;
-        font-family: sans-serif;
-      }
-      #message {
-        font-family: sans-serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-      h1 {
-        font-size: 32px;
-      }
-      h2 {
-        font-size: 20px;
-        font-weight: normal;
-      }
-      input, button {
-        margin: 0 auto;
-        display: block;
-      }
-      input {
-        width: 60%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-      }
-      button {
-        width: 50%;
-        background-color: #bf0a0a;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
+        body {
+            margin: 0;
+            font-family: sans-serif;
+        }
+        #main, #entry {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 90vh;
+            font-family: sans-serif;
+        }
+        #entry {
+            text-align: center;
+            padding: 0 50px;
+        }
+        #message {
+            font-family: sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        h1 {
+            font-size: 32px;
+        }
+        h2 {
+            font-size: 20px;
+            font-weight: normal;
+        }
+        input, button {
+            margin: 0 auto;
+            display: block;
+        }
+        input {
+            width: 60%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button {
+            width: 50%;
+            background-color: #bf0a0a;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-      button:hover {
-        background-color: #da3737;
-      }
+        button:hover {
+            background-color: #da3737;
+        }
 
-      /* The Modal (background) */
-      .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
-        left: 0;
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-      }
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
 
-      /* Modal Content/Box */
-      .modal-content {
-        background-color: #fefefe;
-        margin: 15% auto; /* 15% from the top and centered */
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%; /* Could be more or less, depending on screen size */
-      }
+        /* Modal Content/Box */
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto; /* 15% from the top and centered */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* Could be more or less, depending on screen size */
+        }
 
-      /* The Close Button */
-      .close {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-      }
+        /* The Close Button */
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
 
-      .close:hover,
-      .close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-      }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .nav-wrapper {
+            max-width: 100%;
+            width: 100%;
+            overflow: auto;
+        }
+        .menu .active {
+            font-weight: bold;
+        }
+        .menu-item {
+            min-width: 55px;
+         }
+        .menu-item:hover {
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .menu {
+            background: #eee;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 50px;
+        }
+        #main, #tokens, #transactions, #nav-wrapper {
+            display: none;
+        }
     </style>
-  </head>
-  <body>
-    <div id="main"></div>
-    <div id="message"></div>
-    <!-- Ledger Action Modal -->
-    <div id="ledgerModal" class="modal">
-
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>Please confirm the transaction on your Ledger ..</p>
-      </div>
-
+</head>
+<body>
+<div class="nav-wrapper" id="nav-wrapper">
+    <div class="menu">
+        <div class="menu-item active">Main</div>
+        <div class="menu-item">Tokens</div>
+        <div class="menu-item">History</div>
     </div>
-    <script>
-      // You can also require other files to run in this process
-      require("./renderer.js");
-    </script>
-  </body>
+</div>
+<div id="entry">
+    <h1 id="entry-msg">Connect your Ledger device<br>and open the CasinoCoin application ...</h1>
+    <h4 id="entry-address"></h4>
+</div>
+<div id="main">
+    <h1 id="message-top">Ledger CasinoCoin Address</h1>
+    <h4 id="address-display"></h4>
+    <h4 id="balance"></h4>
+    <br><br>
+    <input type="text" id="address" placeholder="Destination Address">
+    <input type="number" id="destinationTag" placeholder="Destination Tag">
+    <input type="text" id="amount" placeholder="Amount">
+    <button id="submit-tx-btn">Submit Transaction</button>
+</div>
+<div id="tokens"></div>
+<div id="transactions"></div>
+<div id="message"></div>
+<!-- Ledger Action Modal -->
+<div id="ledgerModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close close-confirm">&times;</span>
+        <p>Please confirm the transaction on your Ledger ..</p>
+    </div>
+</div>
+<!-- Ledger Fail TX Modal -->
+<div id="failTxModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close close-tx">&times;</span>
+        <p>Your TX failed, please try again.</p>
+    </div>
+</div>
+<script>
+    // You can also require other files to run in this process
+    require("./renderer.js");
+</script>
+</body>
 </html>
