moving to a more functional approach to clear clutter from main method

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 <body>
 <div class="nav-wrapper" id="nav-wrapper">
     <div class="menu">
-        <div class="menu-item active">Main</div>
-        <div class="menu-item">Tokens</div>
-        <div class="menu-item">History</div>
+        <div class="menu-item active" id="nav-main">Main</div>
+        <div class="menu-item" id="nav-tokens">Tokens</div>
+        <div class="menu-item" id="nav-transactions">History</div>
     </div>
 </div>
 <div id="entry">
